// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Breadcrumb> and <Breadcrumb.Item> matches snapshot 1`] = `
<div>
  <nav
    aria-label="breadcrumbs"
    class="navigation css-1vr3ddk-container-container"
    id="main-nav"
  >
    <ol>
      <li
        class="breadcrumb-item"
      >
        <a
          href="#/home"
        >
          Home
        </a>
      </li>
      <li
        class="breadcrumb-item"
      >
        <a
          href="#/my-courses"
        >
          My courses
        </a>
      </li>
      <li
        class="breadcrumb-item current"
      >
         My super course
      </li>
    </ol>
  </nav>
</div>
`;

exports[`<Breadcrumb> and <Breadcrumb.Item> renders correctly in portal 1`] = `
<nav
  aria-label="breadcrumbs"
  class="css-1vr3ddk-container-container"
>
  <ol>
    <li
      class="breadcrumb-item"
    >
      <a
        href="#/home"
      >
        Home
      </a>
    </li>
    <li
      class="breadcrumb-item"
    >
      <a
        href="#/my-courses"
      >
        My courses
      </a>
    </li>
    <li
      class="breadcrumb-item current"
    >
       My super course
    </li>
  </ol>
</nav>
`;
